# Two-in-One-Welding-Station

./: .gitignore  LICENSE  README.md  generic_rp2350.json
Firmware/: Firmware.ver.1.2-250620Release.uf2  Firmware.ver.1.3-250712Release.uf2  更新日志-25.7.12.txt
LVGLProject/: Themes.slt  UI.sll  UI.spj  UI_events.py
LVGLProject/assets/: ui_font_ASCII.c  ui_font_ASCII.fcfg  ui_font_ASCII19.fcfg  ui_font_ASCII24.fcfg  ui_font_ASCII32.c  ui_font_ASCII32.fcfg  ui_font_ASCII48.c  ui_font_ASCII48.fcfg  ui_font_ASCII88.fcfg
SourceCode/: README  platformio.ini
SourceCode/src/: Encoder_Service.cpp  Encoder_Service.h  main.h  (+33 more)
SourceCode/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
SourceCode/src/ui/fonts/: ui_font_ASCII19.c  ui_font_ASCII24.c  ui_font_ASCII88.c
SourceCode/src/ui/images/: ui_img_1162706898.c  ui_img_1205510230.c  ui_img_1249241237.c  ui_img_1345483443.c  ui_img_1347724781.c  ui_img_1357884022.c  ui_img_13634893.c  ui_img_155116563.c  ui_img_1671917170.c  ui_img_1699618864.c  ui_img_1708415670.c  ui_img_1723942165.c  ui_img_185202102.c  ui_img_1956478733.c  ui_img_2103744591.c  ui_img_2126869900.c  ui_img_290686881.c  ui_img_295618317.c  ui_img_329106951.c  ui_img_413634367.c  ui_img_637286161.c  ui_img_739362403.c  ui_img_740489818.c  ui_img_817906860.c  ui_img_852573520.c  ui_img_921610142.c  ui_img_938671949.c  ui_img_minus_png.c  ui_img_num0_png.c  ui_img_num1_png.c  ui_img_num2_png.c  ui_img_num3_png.c  ui_img_num4_png.c  ui_img_num5_png.c  ui_img_num6_png.c  ui_img_num7_png.c  ui_img_num8_png.c  ui_img_num9_png.c  ui_img_plus_png.c
SourceCode/src/ui/screens/: ui_HeatgunTempSetScreen.c  ui_MainScreen.c  ui_PIDSettingScreen.c  ui_PowerON.c  ui_SolderingTempSetScreen.c  ui_SystemSettingScreen.c
(+6 files in other folders)
