SET(SOURCES screens/ui_PowerON.c
    screens/ui_MainScreen.c
    screens/ui_SolderingTempSetScreen.c
    screens/ui_SystemSettingScreen.c
    screens/ui_HeatgunTempSetScreen.c
    screens/ui_PIDSettingScreen.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_739362403.c
    images/ui_img_1671917170.c
    images/ui_img_185202102.c
    images/ui_img_1699618864.c
    images/ui_img_1708415670.c
    images/ui_img_2103744591.c
    images/ui_img_740489818.c
    images/ui_img_1249241237.c
    images/ui_img_1357884022.c
    images/ui_img_155116563.c
    images/ui_img_1347724781.c
    images/ui_img_413634367.c
    images/ui_img_2126869900.c
    images/ui_img_938671949.c
    images/ui_img_13634893.c
    images/ui_img_num0_png.c
    images/ui_img_num1_png.c
    images/ui_img_num2_png.c
    images/ui_img_num3_png.c
    images/ui_img_num4_png.c
    images/ui_img_num5_png.c
    images/ui_img_num6_png.c
    images/ui_img_num7_png.c
    images/ui_img_num8_png.c
    images/ui_img_num9_png.c
    images/ui_img_852573520.c
    images/ui_img_637286161.c
    images/ui_img_1723942165.c
    images/ui_img_minus_png.c
    images/ui_img_plus_png.c
    images/ui_img_295618317.c
    images/ui_img_817906860.c
    images/ui_img_1345483443.c
    images/ui_img_1956478733.c
    images/ui_img_1162706898.c
    images/ui_img_921610142.c
    images/ui_img_290686881.c
    images/ui_img_329106951.c
    images/ui_img_1205510230.c
    fonts/ui_font_ASCII.c
    fonts/ui_font_ASCII19.c
    fonts/ui_font_ASCII24.c
    fonts/ui_font_ASCII32.c
    fonts/ui_font_ASCII48.c
    fonts/ui_font_ASCII88.c)

add_library(ui ${SOURCES})
